fix sidebar issue on small windows

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -25,5 +25,13 @@
 
 .titlebar {
   height: 35px;
+  min-height: 35px;
   -webkit-app-region: drag;
+}
+
+.items {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
